--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,6 @@
 	line-height: 24px;
 	font-weight: 400;
 
-	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -18,6 +15,5 @@
 .app {
 	display: flex;
 	justify-content: center;
-	height: 100vh;
-	text-align: center;
+	padding: 4rem;
 }
